@@ -6,6 +6,7 @@ import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Date;
 import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Value;
@@ -25,6 +26,8 @@ import main.cl.dagserver.domain.model.SessionDTO;
 @ImportResource("classpath:properties-config.xml")
 @Profile("auth-keycloak")
 public class KeycloakAdapter implements AuthenticationOutputPort {
+	
+	
 	
 	@Value( "${param.keycloak.host}" )
 	protected String keycloakHost;
@@ -47,7 +50,7 @@ public class KeycloakAdapter implements AuthenticationOutputPort {
 	        con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
 	        con.setDoOutput(true);
 	        OutputStream os = con.getOutputStream();
-	        os.write(body.getBytes("UTF-8"));
+	        os.write(body.getBytes(StandardCharsets.UTF_8));
 	        os.flush();
 	        os.close();
 	        JSONObject responsejson = null;
@@ -83,11 +86,11 @@ public class KeycloakAdapter implements AuthenticationOutputPort {
 	        String username = reqobject.getString("username");
 	        String pwd = reqobject.getString("challenge");
 	        String urlStr = keycloakHost + "realms/" + keycloakRealm + "/protocol/openid-connect/token";
-	        String body = "client_id=" + URLEncoder.encode(clientId, "UTF-8") +
-	                      "&client_secret=" + URLEncoder.encode(clientSecret, "UTF-8") +
-	                      "&grant_type=" + URLEncoder.encode("password", "UTF-8") +
-	                      "&username=" + URLEncoder.encode(username, "UTF-8") +
-	                      "&password=" + URLEncoder.encode(pwd, "UTF-8");
+	        String body = "client_id=" + URLEncoder.encode(clientId, StandardCharsets.UTF_8) +
+	                      "&client_secret=" + URLEncoder.encode(clientSecret, StandardCharsets.UTF_8) +
+	                      "&grant_type=" + URLEncoder.encode("password", StandardCharsets.UTF_8) +
+	                      "&username=" + URLEncoder.encode(username, StandardCharsets.UTF_8) +
+	                      "&password=" + URLEncoder.encode(pwd, StandardCharsets.UTF_8);
 	        JSONObject responsejson = makeJSONPost(urlStr, body);
 	        String token = responsejson.getString("access_token");
 	        String refreshToken = responsejson.getString("refresh_token");
@@ -105,9 +108,9 @@ public class KeycloakAdapter implements AuthenticationOutputPort {
 	public AuthDTO untokenize(String token) throws DomainException {
 		try {
 			String urlStr = keycloakHost + "realms/" + keycloakRealm + "/protocol/openid-connect/token/introspect";
-	        String body = "client_id=" + URLEncoder.encode(clientId, "UTF-8") +
-	                      "&client_secret=" + URLEncoder.encode(clientSecret, "UTF-8") +
-	                      "&token=" + URLEncoder.encode(token, "UTF-8");
+	        String body = "client_id=" + URLEncoder.encode(clientId, StandardCharsets.UTF_8) +
+	                      "&client_secret=" + URLEncoder.encode(clientSecret, StandardCharsets.UTF_8) +
+	                      "&token=" + URLEncoder.encode(token, StandardCharsets.UTF_8);
 	            JSONObject responsejson = this.makeJSONPost(urlStr, body);
 	            AuthDTO auth = new AuthDTO();
 	            auth.setAccountType(AccountType.USER);
@@ -125,16 +128,16 @@ public class KeycloakAdapter implements AuthenticationOutputPort {
 	public void logout(String token) throws DomainException {
 		try {
 			String urlStr = keycloakHost + "realms/" + keycloakRealm + "/protocol/openid-connect/logout";
-	        String body = "client_id=" + URLEncoder.encode(clientId, "UTF-8") +
-	                      "&client_secret=" + URLEncoder.encode(clientSecret, "UTF-8") +
-	                      "&refresh_token=" + URLEncoder.encode(token, "UTF-8");
+	        String body = "client_id=" + URLEncoder.encode(clientId, StandardCharsets.UTF_8) +
+	                      "&client_secret=" + URLEncoder.encode(clientSecret,StandardCharsets.UTF_8) +
+	                      "&refresh_token=" + URLEncoder.encode(token, StandardCharsets.UTF_8);
 	        URL url = new URL(urlStr);
 	        HttpURLConnection con = (HttpURLConnection) url.openConnection();
 	        con.setRequestMethod("POST");
 	        con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
 	        con.setDoOutput(true);
 	        OutputStream os = con.getOutputStream();
-	        os.write(body.getBytes("UTF-8"));
+	        os.write(body.getBytes(StandardCharsets.UTF_8));
 	        os.flush();
 	        os.close();
 	        int responseCode = con.getResponseCode();
